# models

./: .gitignore  CMakeLists.txt  README.md  README_zh-CN.md  dev-requirements.txt  model.py  part_A_test.json  utils.py
AM-MobileNet1D/: infer.py  infer.sh  train.py  train.sh
CPT/: README.md  dataset_flow.py  infer.sh  infer_flow.py  train_flow.py
CSRNet/: README.md  dataset.py  image.py  infer.py  infer.sh  make_dateset.py  model.py  part_A_train_with_val.json  part_B_train_with_val.json  test.py  train.py  train.sh  utils.py  val.py  val.sh  vgg.py
DCGAN/: README.md  check.py  check.sh  models.py  of_dcgan.py  plot.py  test_of_dcgan.py  test_of_dcgan.sh  train_of_dcgan.py  train_of_dcgan.sh  train_of_dcgan_graph.py  train_of_dcgan_graph.sh  utils.py
DLA/: README.md  infer.py  infer.sh  requirements.txt  train_oneflow.py  train_oneflow.sh
FODDet/: README.md  UNet.py  dataloader.py  test.py  train.py  train_oneflow.sh  visualize.py
FUNIT/: blocks.py  dataset.py  funit_animals.yaml  funit_model.py  networks.py  notes.md  train.py  train.sh  trainer.py  utils.py
FaceSeg/: README.md  infer.py  infer.sh  requirements.txt  train.py  train.sh  train_oneflow.sh  validation_oneflow.py
FlappyBird/: README.md  requirements.txt  test.py  test_flappy_bird.sh  train.py  train_flappy_bird.sh
LDFnet/: README.md  requirments.txt  train.sh  utils.py
LSTMText/: README.md  infer.py  infer.sh  model.py  train.sh  train_bilstm.py  utils.py
MoE/: cifar10_example.py  mlp.py  moe.py
Quantization/: README.md  quantization_aware_training.py  train.sh
RecommenderSystems/: config.py  dataloader_utils.py  deepFM_module.py  eager_train.py
SRGAN/: README.md  of_loss.py  oneflow_model.py  requirements.txt  test_benchmark.py  test_of_srgan.py  test_of_srgan.sh  train_of_srgan.py  train_of_srgan.sh
SincNet/: infer.py  infer.sh  train.py  train.sh
ops/csrc/: CMakeLists.txt  nms.cpp  nms.cu  op_dispatch.cpp  op_dispatch.h  roi_align.cpp  roi_align.cu  roi_align.h
(+2975 files in other folders)
